[eas] BM-18758 Feat: EAS 16.1, implements Find command