@@ -19,12 +19,11 @@
 package net.bluemind.eas.command.getitemestimate;
 
 import java.util.Collection;
+import java.util.List;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
-
-import com.google.common.collect.ImmutableList;
 
 import net.bluemind.eas.http.AuthorizedDeviceQuery;
 import net.bluemind.eas.http.IEasRequestEndpoint;
@@ -51,7 +50,7 @@ public class GetItemEstimateEndpoint extends WbxmlHandlerBase implements IEasReq
 
 	@Override
 	public Collection<String> supportedCommands() {
-		return ImmutableList.of("GetItemEstimate");
+		return List.of("GetItemEstimate");
 	}
 
 	@Override
