@@ -19,13 +19,11 @@
 package net.bluemind.eas.command.mail.sendmail;
 
 import java.util.Collection;
+import java.util.List;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.io.ByteSource;
 
-import io.vertx.core.AsyncResult;
 import io.vertx.core.Handler;
-import io.vertx.core.eventbus.Message;
 import net.bluemind.eas.backend.BackendSession;
 import net.bluemind.eas.backend.SendMailData;
 import net.bluemind.eas.backend.SendMailData.Mode;
@@ -53,31 +51,26 @@ public class SendMailEndpoint12 extends MailRequestBase implements IEasRequestEn
 		mail.saveInSent = saveInSent;
 		mail.mode = Mode.Send;
 
-		VertxPlatform.eventBus().request(EasBusEndpoints.SEND_MAIL, new LocalJsonObject<SendMailData>(mail),
-				new Handler<AsyncResult<Message<String>>>() {
-
-					@Override
-					public void handle(AsyncResult<Message<String>> event) {
-						if (event.failed()) {
-							completion.handle(null);
-							responder.sendStatus(500);
-						} else {
-							if (event.result().body() == null) {
-								completion.handle(null);
-								responder.sendStatus(200);
-							} else {
-								completion.handle(null);
-								responder.sendStatus(500);
-							}
-						}
-					}
-				});
+		VertxPlatform.eventBus().request(EasBusEndpoints.SEND_MAIL, new LocalJsonObject<SendMailData>(mail), event -> {
+			if (event.failed()) {
+				completion.handle(null);
+				responder.sendStatus(500);
+			} else {
+				if (event.result().body() == null) {
+					completion.handle(null);
+					responder.sendStatus(200);
+				} else {
+					completion.handle(null);
+					responder.sendStatus(500);
+				}
+			}
+		});
 
 	}
 
 	@Override
 	public Collection<String> supportedCommands() {
-		return ImmutableList.of("SendMail");
+		return List.of("SendMail");
 	}
 
 	@Override
