@@ -19,12 +19,11 @@
 package net.bluemind.eas.command.mail.smartreply;
 
 import java.util.Collection;
+import java.util.List;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
-
-import com.google.common.collect.ImmutableList;
 
 import net.bluemind.eas.http.AuthorizedDeviceQuery;
 import net.bluemind.eas.http.IEasRequestEndpoint;
@@ -67,7 +66,7 @@ public class SmartReplyEndpoint extends WbxmlHandlerBase implements IEasRequestE
 
 	@Override
 	public Collection<String> supportedCommands() {
-		return ImmutableList.of("SmartReply");
+		return List.of("SmartReply");
 	}
 
 	@Override
