@@ -19,8 +19,8 @@
 package net.bluemind.eas.command.mail.smartreply;
 
 import java.util.Collection;
+import java.util.List;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.io.ByteSource;
 
 import io.vertx.core.AsyncResult;
@@ -76,7 +76,7 @@ public class SmartReplyEndpoint12 extends MailRequestBase implements IEasRequest
 
 	@Override
 	public Collection<String> supportedCommands() {
-		return ImmutableList.of("SmartReply");
+		return List.of("SmartReply");
 	}
 
 	@Override
