@@ -19,12 +19,11 @@
 package net.bluemind.eas.command.moveitems;
 
 import java.util.Collection;
+import java.util.List;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
-
-import com.google.common.collect.ImmutableList;
 
 import net.bluemind.eas.http.AuthorizedDeviceQuery;
 import net.bluemind.eas.http.IEasRequestEndpoint;
@@ -107,7 +106,7 @@ public class MoveItemsEndpoint extends WbxmlHandlerBase implements IEasRequestEn
 
 	@Override
 	public Collection<String> supportedCommands() {
-		return ImmutableList.of("MoveItems");
+		return List.of("MoveItems");
 	}
 
 	@Override
